--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
 <div class="app-content content">
   <div class="content-overlay"></div>
   <div class="header-navbar-shadow"></div>
-  <div class="content-wrapper container-xxl p-0">
+  <div class="content-wrapper container-fluid p-0">
     <div class="content-body">
       <!-- Aquí va tu contenido de páginas -->
       <router-outlet></router-outlet>
