--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,26 +1,19 @@
 <nav class="header-navbar navbar navbar-expand-lg align-items-center floating-nav navbar-light navbar-shadow">
-  <div class="navbar-container d-flex content">
-    <!-- Left: brand + toggle -->
+  <div class="navbar-container d-flex container-fluid">
+    <!-- Left: brand -->
     <div class="bookmark-wrapper d-flex align-items-center">
       <a class="navbar-brand" href="/" aria-label="Home">
         <img src="/assets/vuexy/app-assets/images/logo/logo.svg" alt="Logo" height="24" />
         <span class="brand-text ms-1">TareaCine</span>
       </a>
-      <a class="nav-link modern-nav-toggle pe-0" role="button" aria-label="Alternar menú" (click)="toggleMenu()">
-        <i class="d-block d-xl-none" data-feather="menu"></i>
-      </a>
     </div>
-
     <!-- Right: acciones/usuario -->
     <ul class="nav navbar-nav align-items-center ms-auto">
-      <!-- Buscar -->
       <li class="nav-item d-none d-lg-block">
         <a class="nav-link nav-link-style" role="button" title="Theme">
           <i class="ficon" data-feather="sun"></i>
         </a>
       </li>
-
-      <!-- Notificaciones (placeholder) -->
       <li class="nav-item dropdown dropdown-notification me-25">
         <a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="ficon" data-feather="bell"></i>
@@ -32,8 +25,6 @@
           <li><a class="dropdown-item" href="#">Nueva alerta</a></li>
         </ul>
       </li>
-
-      <!-- Usuario (placeholder) -->
       <li class="nav-item dropdown dropdown-user">
         <a class="nav-link dropdown-toggle dropdown-user-link" data-bs-toggle="dropdown" aria-expanded="false">
           <div class="user-nav d-sm-flex d-none">
