--- a/src/app/pages/cartelera-componente/cartelera-componente.html
+++ b/src/app/pages/cartelera-componente/cartelera-componente.html
@@ -40,7 +40,7 @@
           </p>
           <div class="d-flex justify-content-between align-items-center mt-1">
             <small class="text-muted" *ngIf="p.fechaEstreno">Estreno: {{ p.fechaEstreno | date:'mediumDate' }}</small>
-            <a class="btn btn-sm btn-outline-primary waves-effect">Ver detalles</a>
+            <a class="btn btn-sm btn-outline-primary waves-effect" (click)="verDetalles(p)">Ver detalles</a>
           </div>
         </div>
       </div>
