--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -9,38 +9,45 @@
     </div>
     <!-- Right: acciones/usuario -->
     <ul class="nav navbar-nav align-items-center ms-auto">
-      <li class="nav-item d-none d-lg-block">
-        <a class="nav-link nav-link-style" role="button" title="Theme">
-          <i class="ficon" data-feather="sun"></i>
+      <!--<li class="nav-item d-none d-lg-block">-->
+      <!--  <a class="nav-link nav-link-style" role="button" title="Theme">-->
+      <!--    <i class="ficon" data-feather="sun"></i>-->
+      <!--  </a>-->
+      <!--</li>-->
+      <!--<li class="nav-item dropdown dropdown-notification me-25">-->
+      <!--  <a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">-->
+      <!--    <i class="ficon" data-feather="bell"></i>-->
+      <!--    <span class="badge rounded-pill bg-danger badge-up">3</span>-->
+      <!--  </a>-->
+      <!--  <ul class="dropdown-menu dropdown-menu-end">-->
+      <!--    <li class="dropdown-header">Notificaciones</li>-->
+      <!--    <li><hr class="dropdown-divider" /></li>-->
+      <!--    <li><a class="dropdown-item" href="#">Nueva alerta</a></li>-->
+      <!--  </ul>-->
+      <!--</li>-->
+      <!--<li class="nav-item dropdown dropdown-user">-->
+      <!--  <a class="nav-link dropdown-toggle dropdown-user-link" data-bs-toggle="dropdown" aria-expanded="false">-->
+      <!--    <div class="user-nav d-sm-flex d-none">-->
+      <!--      <span class="user-name fw-bolder">Usuario</span>-->
+      <!--      <span class="user-status">Admin</span>-->
+      <!--    </div>-->
+      <!--    <span class="avatar">-->
+      <!--      <img class="round" src="/assets/vuexy/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40" width="40" />-->
+      <!--      <span class="avatar-status-online"></span>-->
+      <!--    </span>-->
+      <!--  </a>-->
+      <!--  <ul class="dropdown-menu dropdown-menu-end">-->
+      <!--    <li><a class="dropdown-item" href="#">Perfil</a></li>-->
+      <!--    <li><a class="dropdown-item" href="#">Salir</a></li>-->
+      <!--  </ul>-->
+      <!--</li>-->
+
+      <div class="ms-auto d-flex align-items-center">
+        <a class="btn btn-primary btn-sm" [routerLink]="['/peliculas']" title="Mantenimiento de Películas">
+          Mantenimiento de Películas
         </a>
-      </li>
-      <li class="nav-item dropdown dropdown-notification me-25">
-        <a class="nav-link" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="ficon" data-feather="bell"></i>
-          <span class="badge rounded-pill bg-danger badge-up">3</span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li class="dropdown-header">Notificaciones</li>
-          <li><hr class="dropdown-divider" /></li>
-          <li><a class="dropdown-item" href="#">Nueva alerta</a></li>
-        </ul>
-      </li>
-      <li class="nav-item dropdown dropdown-user">
-        <a class="nav-link dropdown-toggle dropdown-user-link" data-bs-toggle="dropdown" aria-expanded="false">
-          <div class="user-nav d-sm-flex d-none">
-            <span class="user-name fw-bolder">Usuario</span>
-            <span class="user-status">Admin</span>
-          </div>
-          <span class="avatar">
-            <img class="round" src="/assets/vuexy/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40" width="40" />
-            <span class="avatar-status-online"></span>
-          </span>
-        </a>
-        <ul class="dropdown-menu dropdown-menu-end">
-          <li><a class="dropdown-item" href="#">Perfil</a></li>
-          <li><a class="dropdown-item" href="#">Salir</a></li>
-        </ul>
-      </li>
+      </div>
+
     </ul>
   </div>
 </nav>
