--- a/src/app/pages/cartelera-componente/cartelera-componente.html
+++ b/src/app/pages/cartelera-componente/cartelera-componente.html
@@ -32,14 +32,14 @@
         <div class="card-body">
           <h4 class="card-title mb-25">{{ p.titulo }}</h4>
           <div class="d-flex align-items-center flex-wrap mb-50">
-            <span class="badge rounded-pill badge-light-primary me-50" *ngIf="p.genero">{{ p.genero }}</span>
-            <span class="badge rounded-pill badge-light-warning" *ngIf="p.calificacion">★ {{ p.calificacion }}</span>
+            <span class="badge rounded-pill badge-light-primary me-50" *ngIf="p.tipo">{{ p.tipo }}</span>
+
           </div>
           <p class="card-text text-truncate-3">
             {{ p.descripcion || 'Sin descripción disponible.' }}
           </p>
           <div class="d-flex justify-content-between align-items-center mt-1">
-            <small class="text-muted" *ngIf="p.fechaEstreno">Estreno: {{ p.fechaEstreno | date:'mediumDate' }}</small>
+            <small class="text-muted" *ngIf="p.year">Estreno: {{ p.year | date:'mediumDate' }}</small>
             <a class="btn btn-sm btn-outline-primary waves-effect" (click)="verDetalles(p)">Ver detalles</a>
           </div>
         </div>
